force-app/main/default/objects/Business_Incubation_Grants__c/Business_Incubation_Grants__c.object-meta.xml
<CustomObject>
    <description>Economic Development module to manage grant applications and reporting.</description>
    <label>Business Incubation Grant</label>
    <nameField>
        <displayFormat>BIC-{YYYY}-{0000}</displayFormat>
        <label>Business Incubation Grants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Incubation Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>