force-app/main/default/objects/Business_Incubation_Grants__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Incubation Grants</relationshipLabel>
    <relationshipName>Business_Incubation_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>