force-app/main/default/objects/Business_Incubation_Grants__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>175</length>
    <type>Text</type>
</CustomField>