force-app/main/default/objects/Business_Incubation_Grants__c/fields/Address_Of_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Of_Location__c</fullName>
    <label>Address Of Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>