force-app/main/default/objects/Business_Incubation_Grants__c/fields/Administration_Comments__c.field-meta.xml
<CustomField>
    <fullName>Administration_Comments__c</fullName>
    <label>Administration - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>