force-app/main/default/objects/Business_Incubation_Grants__c/fields/Agreement_Attached__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Attached__c</fullName>
    <label>Agreement Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>