force-app/main/default/objects/Business_Incubation_Grants__c/fields/Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved__c</fullName>
    <label>Amount Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>