force-app/main/default/objects/Business_Incubation_Grants__c/fields/Annual_Financial_Statements__c.field-meta.xml
<CustomField>
    <fullName>Annual_Financial_Statements__c</fullName>
    <label>Report #1 - Annual Financial Statements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>