force-app/main/default/objects/Business_Incubation_Grants__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <label>Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Further Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>