force-app/main/default/objects/Business_Incubation_Grants__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>175</length>
    <type>Text</type>
</CustomField>