force-app/main/default/objects/Business_Incubation_Grants__c/fields/City_Of_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>City_Of_Event_Location__c</fullName>
    <label>City Of Event Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>