force-app/main/default/objects/Business_Incubation_Grants__c/fields/Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Incubation Grants (Contact)</relationshipLabel>
    <relationshipName>Business_Incubation_Grants1</relationshipName>
    <type>Lookup</type>
</CustomField>