force-app/main/default/objects/Business_Incubation_Grants__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Incubation Grants</relationshipLabel>
    <relationshipName>Business_Incubation_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>