force-app/main/default/objects/Business_Incubation_Grants__c/fields/Corporate_Structure__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Structure__c</fullName>
    <label>Corporate Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not-For-Profit</fullName>
            </value>
            <value>
                <fullName>For-Profit</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Education Institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>