force-app/main/default/objects/Business_Incubation_Grants__c/fields/CoT_Staff_Person_Engaged_If_Event__c.field-meta.xml
<CustomField>
    <fullName>CoT_Staff_Person_Engaged_If_Event__c</fullName>
    <label>CoT Staff Person Engaged If Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>