force-app/main/default/objects/Business_Incubation_Grants__c/fields/CoT_Staff_Person_Engaged_If_Inkind__c.field-meta.xml
<CustomField>
    <fullName>CoT_Staff_Person_Engaged_If_Inkind__c</fullName>
    <label>CoT Staff Person Engaged If Inkind</label>
    <length>50</length>
    <type>Text</type>
</CustomField>