force-app/main/default/objects/Business_Incubation_Grants__c/fields/Date_1st_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_1st_Report__c</fullName>
    <label>Program - Date 1st Report</label>
    <type>Date</type>
</CustomField>