force-app/main/default/objects/Business_Incubation_Grants__c/fields/Date_2nd_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_2nd_Report__c</fullName>
    <label>Program - Date 2nd Report</label>
    <type>Date</type>
</CustomField>