force-app/main/default/objects/Business_Incubation_Grants__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <label>Date Reviewed:</label>
    <type>Date</type>
</CustomField>