force-app/main/default/objects/Business_Incubation_Grants__c/fields/Detail_of_In_Kind_Support__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_In_Kind_Support__c</fullName>
    <label>Detail of In-Kind Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>