force-app/main/default/objects/Business_Incubation_Grants__c/fields/End_Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Event__c</fullName>
    <label>End Date of Event</label>
    <type>Date</type>
</CustomField>