force-app/main/default/objects/Business_Incubation_Grants__c/fields/Entrepreneurs_Served__c.field-meta.xml
<CustomField>
    <fullName>Entrepreneurs_Served__c</fullName>
    <label>Entrepreneurs Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>