force-app/main/default/objects/Business_Incubation_Grants__c/fields/Event_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Report_Date__c</fullName>
    <label>Event - Report Date</label>
    <type>Date</type>
</CustomField>