force-app/main/default/objects/Business_Incubation_Grants__c/fields/Expected_Audience__c.field-meta.xml
<CustomField>
    <fullName>Expected_Audience__c</fullName>
    <label>Expected Audience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>