force-app/main/default/objects/Business_Incubation_Grants__c/fields/Funding_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Request_Type__c</fullName>
    <label>Funding Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seed Funds</fullName>
            </value>
            <value>
                <fullName>Program Funds</fullName>
            </value>
            <value>
                <fullName>Operating Funds</fullName>
            </value>
            <value>
                <fullName>Next Stage Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>