force-app/main/default/objects/Business_Incubation_Grants__c/fields/In_Kind_Event_Support__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Event_Support__c</fullName>
    <label>In-Kind Event Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>