force-app/main/default/objects/Business_Incubation_Grants__c/fields/Marketing_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Outreach__c</fullName>
    <label>Marketing Outreach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>