force-app/main/default/objects/Business_Incubation_Grants__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <label>Name of Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>