force-app/main/default/objects/Business_Incubation_Grants__c/fields/Name_Of_Location__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Location__c</fullName>
    <label>Name Of Location</label>
    <length>70</length>
    <type>Text</type>
</CustomField>