force-app/main/default/objects/Business_Incubation_Grants__c/fields/Number_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients__c</fullName>
    <label>Report #1 - Number of Clients</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>