force-app/main/default/objects/Business_Incubation_Grants__c/fields/Number_Of_Events__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Events__c</fullName>
    <label>Report #1 - Number Of Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>