force-app/main/default/objects/Business_Incubation_Grants__c/fields/Number_of_Queries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Queries__c</fullName>
    <label>Report #1 - Number of Queries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>