force-app/main/default/objects/Business_Incubation_Grants__c/fields/Number_of_Reports_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reports_Required__c</fullName>
    <label>Number of Reports Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>