force-app/main/default/objects/Business_Incubation_Grants__c/fields/Organization_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Organization_Mandate__c</fullName>
    <label>Organization Mandate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>