force-app/main/default/objects/Business_Incubation_Grants__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <label>Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>