force-app/main/default/objects/Business_Incubation_Grants__c/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <label>Partners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>