force-app/main/default/objects/Business_Incubation_Grants__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>175</length>
    <type>Text</type>
</CustomField>