force-app/main/default/objects/Business_Incubation_Grants__c/fields/Postal_Code_Of_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Of_Event_Location__c</fullName>
    <label>Postal Code Of Event Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>