force-app/main/default/objects/Business_Incubation_Grants__c/fields/Projected_Number_of_Business_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Projected_Number_of_Business_Engaged__c</fullName>
    <label>Projected Number of Business Engaged</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>