force-app/main/default/objects/Business_Incubation_Grants__c/fields/Projected_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Projected_Outcomes__c</fullName>
    <label>Projected Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>