force-app/main/default/objects/Business_Incubation_Grants__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>175</length>
    <type>Text</type>
</CustomField>