force-app/main/default/objects/Business_Incubation_Grants__c/fields/Province_of_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Event_Location__c</fullName>
    <label>Province of Event Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>