force-app/main/default/objects/Business_Incubation_Grants__c/fields/Report_2_Attendance_at_Events__c.field-meta.xml
<CustomField>
    <fullName>Report_2_Attendance_at_Events__c</fullName>
    <label>Report #2 - Attendance at Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>