force-app/main/default/objects/Business_Incubation_Grants__c/fields/Report_2_Number_of_On_Site_Clients__c.field-meta.xml
<CustomField>
    <fullName>Report_2_Number_of_On_Site_Clients__c</fullName>
    <label>Report #2 - Number of On-Site Clients</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>