force-app/main/default/objects/Business_Incubation_Grants__c/fields/Report_2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_2_Start_Date__c</fullName>
    <label>Report #2 - Start Date</label>
    <type>Date</type>
</CustomField>