force-app/main/default/objects/Business_Incubation_Grants__c/fields/Report_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Report_Reminder__c</fullName>
    <description>Sends a reminder to the client to remind them their report is due.</description>
    <inlineHelpText>Turn this to yes to initiate a workflow to send a reminder to the organization.</inlineHelpText>
    <label>Report - Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>