force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Event_is_in_Toronto__c.field-meta.xml
<CustomField>
    <fullName>Review_Event_is_in_Toronto__c</fullName>
    <description>Must be &quot;Yes&quot;</description>
    <inlineHelpText>Must be &quot;Yes&quot;</inlineHelpText>
    <label>Review - Event is in Toronto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>