force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Funding_Dedication__c.field-meta.xml
<CustomField>
    <fullName>Review_Funding_Dedication__c</fullName>
    <description>Funding will only be used for the direct delivery of programming and services to entrepreneurs.</description>
    <inlineHelpText>Funding will only be used for the direct delivery of programming and services to entrepreneurs.</inlineHelpText>
    <label>Review – Funding Dedication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>