force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Metrics_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Review_Metrics_Capacity__c</fullName>
    <description>Organization has the ability to measure and report to the City on the impact that will be made (including:  number of clients served, number of businesses formed, number of jobs created).</description>
    <inlineHelpText>Organization has the ability to measure and report to the City on the impact that will be made (including:  number of clients served, number of businesses formed, number of jobs created).</inlineHelpText>
    <label>Review – Metrics &amp; Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>