force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Organization_Type_Fits_Requirem__c.field-meta.xml
<CustomField>
    <fullName>Review_Organization_Type_Fits_Requirem__c</fullName>
    <description>Organization cannot be for-profit.</description>
    <inlineHelpText>Organization cannot be for-profit.</inlineHelpText>
    <label>Review – Organization Type Fits Requirem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>