force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Organizational_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Review_Organizational_Capacity__c</fullName>
    <description>Organization has the capacity to deliver the event based past performance - 1 lowest – 5 highest.</description>
    <inlineHelpText>Organization has the capacity to deliver the event based past performance - 1 lowest – 5 highest.</inlineHelpText>
    <label>Review – Organizational Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>