force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Organizational_Mandate_Alignmen__c.field-meta.xml
<CustomField>
    <fullName>Review_Organizational_Mandate_Alignmen__c</fullName>
    <description>Organization has a mandate aligned with the City’s objectives of accelerating business growth, supporting the development of key sectors, new company formation, company retention, job creation, innovation and commercialization of products, services and technologies and entrepreneurial capacity building.</description>
    <inlineHelpText>Organization has a mandate aligned with the City’s objectives of accelerating business growth, supporting the development of key sectors, new company formation, company retention, job creation, innovation and commercialization of products and services.</inlineHelpText>
    <label>Review – Organizational Mandate Alignmen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>