force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Raises_Awareness_of_Toronto_s_B__c.field-meta.xml
<CustomField>
    <fullName>Review_Raises_Awareness_of_Toronto_s_B__c</fullName>
    <description>Event must raise awareness of Toronto’s support for the startup community.</description>
    <inlineHelpText>Event must raise awareness of Toronto’s support for the startup community.</inlineHelpText>
    <label>Review – Raises Awareness of Toronto’s B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>