force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Services_Key_Demographics__c.field-meta.xml
<CustomField>
    <fullName>Review_Services_Key_Demographics__c</fullName>
    <label>Review – Services Key Demographics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>