force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Supports_Key_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Review_Supports_Key_Sectors__c</fullName>
    <label>Review – Supports Key Sectors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>