force-app/main/default/objects/Business_Incubation_Grants__c/fields/Review_Supports_Strategic_Communicatio__c.field-meta.xml
<CustomField>
    <fullName>Review_Supports_Strategic_Communicatio__c</fullName>
    <description>Event must support the Startup Here brand.</description>
    <inlineHelpText>Event must support the Startup Here brand.</inlineHelpText>
    <label>Review – Supports Strategic Communicatio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>