force-app/main/default/objects/Business_Incubation_Grants__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chris Rickett</fullName>
            </value>
            <value>
                <fullName>Nirvana Champion</fullName>
            </value>
            <value>
                <fullName>Nina Gesa</fullName>
            </value>
            <value>
                <fullName>Karen Keskull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>