force-app/main/default/objects/Business_Incubation_Grants__c/fields/Sponsorship_Benefits_Event_Req_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Benefits_Event_Req_If_Others__c</fullName>
    <label>Sponsorship Benefits Event Req If Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>