force-app/main/default/objects/Business_Incubation_Grants__c/fields/Sponsorship_Benefits_If_Event_Request__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Benefits_If_Event_Request__c</fullName>
    <label>Sponsorship Benefits If Event Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logo Placement</fullName>
            </value>
            <value>
                <fullName>Speaking Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>